# starter_cpp17

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja
src/: main.cpp
